--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^12.23.22",
     "html2pdf.js": "^0.10.3",
     "next": "15.3.5",
     "next-themes": "^0.4.6",
